prep and fix issues with jdk 17 compatibility